# hackathon-proj

./: .gitignore  README.md
api-endpoint/: main.py  pyproject.toml
backend/: .gitignore  README.md
fastapi-endpoint/: .gitignore  ai_agent.py  main.py  pyproject.toml
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/agent/: prompts.ts  route.ts  session.ts  tools.ts  types.ts
frontend/src/app/api/agent/stream/: route.ts
frontend/src/app/api/agent/stt/: route.ts
frontend/src/app/api/agent/tts/: route.ts
frontend/src/app/auth/: layout.tsx
frontend/src/app/auth/login/: page.tsx
frontend/src/app/auth/register/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/menu-intelligence/: page.tsx
frontend/src/app/order/: page.tsx
frontend/src/app/order/[restaurantId]/: page.tsx
frontend/src/app/revenue-optimization/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/voice-copilot/: page.tsx
frontend/src/components/: app-sidebar.tsx  client-layout.tsx  grid-pattern.tsx
frontend/src/components/ui/: chart.tsx
frontend/src/lib/: api.ts  data.ts  supabase.ts
