[project]
name = "api-endpoint"
version = "0.1.0"
description = "Restaurant Analytics API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.0.0",
    "pydantic>=2.0.0",
    "sarvamai>=0.1.26",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]
